--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -9,7 +9,7 @@
 
   /* Large desktop */
 @media (min-width: 1200px) { 
-	body {border:1px solid red;}
+	/*body {border:1px solid red;}*/
 
  }
  
